<resources>
    <string name="app_name">PriorityTodo3mvvm</string>
    <string name="next">Next</string>
    <string name="signup">SignUp</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="type_your_password">Type your password</string>
    <string name="already_signed_up">Already Signed up</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="todo">Todo</string>
    <string name="view_todos">View Todos</string>
    <string name="add">Add</string>
    <string name="type_your_task">Type your Todo</string>
    <string name="by_name">By name</string>
    <string name="id">id</string>
    <string name="title_activity_user_drawer">UserDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="willDo">TODO</string>
</resources>